[gd_scene load_steps=9 format=3 uid="uid://ddu1ipwtc3mbw"]

[ext_resource type="Script" path="res://scripts/fireball.gd" id="1_8duu6"]
[ext_resource type="Texture2D" uid="uid://snu0607xd5gt" path="res://assets/spells.png" id="2_piuja"]

[sub_resource type="CircleShape2D" id="CircleShape2D_75q28"]
radius = 6.0

[sub_resource type="AtlasTexture" id="AtlasTexture_ec6nm"]
atlas = ExtResource("2_piuja")
region = Rect2(32, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5gi55"]
atlas = ExtResource("2_piuja")
region = Rect2(48, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ae0ah"]
atlas = ExtResource("2_piuja")
region = Rect2(16, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_d1nj1"]
atlas = ExtResource("2_piuja")
region = Rect2(0, 48, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_udfty"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ec6nm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5gi55")
}],
"loop": false,
"name": &"fireball_impact",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ae0ah")
}],
"loop": true,
"name": &"fireball_moving",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d1nj1")
}],
"loop": true,
"name": &"fireball_stationary",
"speed": 5.0
}]

[node name="fireball" type="Area2D"]
collision_layer = 8
collision_mask = 5
script = ExtResource("1_8duu6")

[node name="fireball_collision" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_75q28")
debug_color = Color(0.858447, 0.363227, 0.0445463, 0.42)

[node name="fireball_projectile" type="AnimatedSprite2D" parent="fireball_collision"]
position = Vector2(-1, 0)
sprite_frames = SubResource("SpriteFrames_udfty")
animation = &"fireball_stationary"

[node name="fireball_lifetime_timer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="fireball_audio" type="AudioStreamPlayer2D" parent="."]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="fireball_lifetime_timer" to="." method="_on_fireball_lifetime_timer_timeout"]
